# lead-generator

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
config/: campaign.yaml  categories.yaml  decision_roles.yaml  jurisdictions.yaml  learned_score.yaml  licensing.yaml  markets.yaml  pricing.yaml  search_templates.yaml  sources.yaml
dashboard/: .env.local.example  .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  portless.json  proxy.ts
data/: pallares.db-shm  pallares.db.bak-2026-06-12  us_cities_30k.csv
docs/: GOOGLE-PLACES-SETUP.md  README.md  YIELD-PROOF-PACK.md  api-first-architecture.md  audit-lead-intelligence-2026-07-20.md  deferred-outcome-ml.md  lead-intelligence.md  observation-runs.md  partner-api.md  partner-api.openapi.yaml
sales-app/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: check_acceptance.py  ci_postgres_bootstrap.sql  compare_db_counts.py  cost_audit.py  create_auth_user.py  create_partner_api_key.py  delete_auth_users.py  diagnose_migration_gaps.py  generate_magic_link.py  generate_state_markets.py  inspect_auth_user.py  invite_user.py  migrate_sqlite_to_supabase.py  rep_sign_in_url.py  run_la_retry.py  run_phase6_remaining.py  run_reedley.py  run_smoke_sample.py  spotcheck_migration.py  sync_decision_roles.py  sync_sales_vercel_env.py  truncate_db.py  update_magic_link_template.py  verify_supabase.py  wipe_db.py  yield_report.py
supabase/: .gitignore  config.toml
(+1802 files in other folders)
